# slothy_bot

./: pyproject.toml
bot/: bot.py  docker-compose.test.yml
bot/handlers/: common.py  find_service.py  help_command.py  my_offers.py  offer_service.py  start.py  support_command.py
bot/keyboards/: findserv_keyboards.py  main_menu.py  my_offers_keyboards.py  offer_keyboards.py  support_keyboard.py
bot/models/: service.py
bot/services/: base.py  postgres.py  redis.py
bot/states/: offer_state.py
bot/utils/: help_text.py  text.py
